# project-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  2026-01-22-whya-re-we-not-using-obsidian.txt  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.fly  ISSUES.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  fly.toml  mkdocs.yml  nginx.conf  nixpacks.toml  personal_ai_system_plan.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh
.cascade/: settings.local.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
backend/: Dockerfile  __init__.py  auth.py  config.py  main.py  prompt_config.yaml
backend/routers/: actions.py  arxiv.py  calendar.py  chat.py  email.py  github.py  joplin.py  notes.py  onenote.py  sync.py  tasks.py  telegram.py
backend/services/: actions.py  ai.py  arxiv.py  chat_history.py  context_cache.py  github.py  graph.py  joplin.py  prompt_config.py  prompts.py  sanitization.py  search.py  security.py  sync.py  telegram.py  timezone.py  vectors.py  web_fetch.py
docs/: index.md
docs/api/: authentication.md  chat.md  overview.md
docs/architecture/: overview.md  security.md
docs/development/: setup.md  testing.md
docs/features/: ai-chat.md  arxiv.md  calendar.md  email.md  github.md  notes.md  tasks.md  telegram.md  web-search.md
docs/getting-started/: azure-setup.md  configuration.md  deployment.md  installation.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/components/: Accounts.css  Accounts.jsx  Actions.css  Actions.jsx  Actions.test.jsx  ArxivDigest.css  ArxivDigest.jsx  Calendar.css  Calendar.jsx  Chat.css  Chat.jsx  Chat.test.jsx  Email.css  Email.jsx  ErrorBoundary.jsx  NoteEditor.css  NoteEditor.jsx  Notes.css  Notes.jsx  Tasks.css  Tasks.jsx  Toast.css  Toast.jsx
frontend/src/test/: NoteEditor.test.jsx  Notes.test.jsx  setup.js  utils.jsx
tests/: __init__.py  conftest.py  test_notes.py  test_redis_services.py
tests/integration/: __init__.py  test_github_live.py
tests/routers/: __init__.py  test_actions.py  test_calendar.py  test_chat.py  test_email.py  test_github.py  test_joplin.py  test_notes.py  test_onenote.py  test_sync.py  test_tasks.py  test_telegram.py
tests/services/: test_actions.py  test_ai.py  test_context_cache.py  test_graph.py  test_prompts.py  test_sanitization.py  test_search.py  test_sync.py  test_vectors.py
